--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -19,7 +19,8 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col size="2" class="ion-hide-md-down">
-        <app-usuario-img src="fafafa"></app-usuario-img>
+        <app-usuario-img [src]="img_url"></app-usuario-img>
+        <input type="file" (change)="fileUpload($event.target.files)" />
         <!-- <app-usuario-img [src]="usuario.img_url"></app-usuario-img>        -->
       </ion-col>
       <ion-col size-sm="12" size-md="9" size-lg="7">
@@ -86,6 +87,30 @@
                     >{{f.name}}</ion-select-option
                   >
                 </ion-select>
+              </ion-item>
+
+              <ion-item class="expand-full" class="ion-hide-md-up">
+                  <ion-col size="10" size-md="12" >
+                    <input type="file" (change)="fileUpload($event.target.files)" />
+                    <!-- <ion-item class="ion-no-padding">
+                      <ion-label position="floating">Imagen (url)</ion-label>
+                      <ion-input
+                    name="img_url"
+                    [(ngModel)]="profile.img_url"
+                    required
+                    ></ion-input>
+                    </ion-item> -->
+                  </ion-col>
+                  <ion-col
+                  size="2"
+                  class="ion-align-self-center ion-hide-sm-up ion-no-padding
+                  "
+                  >
+                  <ion-item>
+                    <app-usuario-img [src]="img_url"></app-usuario-img>
+                  </ion-item>
+                 
+                </ion-col>
               </ion-item>
 
               <!-- </ion-col> -->
@@ -190,14 +215,15 @@
               <!-- </ion-col> -->
               <!-- <ion-item class="expand-full">
                   <ion-col size="10" size-md="12" >
-                    <ion-item class="ion-no-padding">
+                    <input type="file" (change)="fileUpload($event.target.files)" />
+                    <!- - <ion-item class="ion-no-padding">
                       <ion-label position="floating">Imagen (url)</ion-label>
                       <ion-input
                     name="img_url"
-                    [(ngModel)]="usuario.img_url"
+                    [(ngModel)]="profile.img_url"
                     required
                     ></ion-input>
-                    </ion-item>
+                    </ion-item> - ->
                   </ion-col>
                   <ion-col
                   size="2"
@@ -205,7 +231,7 @@
                   "
                   >
                   <ion-item>
-                    <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
+                    <app-usuario-img [src]="profile.img_url"></app-usuario-img>
                   </ion-item>
                  
                 </ion-col>
