--- a/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/src/app/modules/auth/components/login-view/login-view.component.html
@@ -15,7 +15,7 @@
               <div class="expand-full ion-padding-start ion-padding-end">
                 <ion-item class="expand-full">
                   <ion-col class="ion-no-padding">
-                    <ion-label position="stacked">Username</ion-label>
+                    <ion-label position="stacked">Usuario</ion-label>
                     <ion-input
                       class="text-right"
                       (keypress)="keyPress($event)"
