--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -44,7 +44,7 @@
                     <ion-item class="w-100 ion-no-padding ion-margin-bottom">
                       <!-- <ion-label position="floating">Imágen</ion-label> -->
                       <!-- [(ngModel)]="image.code" -->
-                      <input type="file" (change)="fileUpload($event.target.files)" />
+                      <input type="file" (change)="fileUpload($event.target)" />
                     </ion-item>
                     <div>
                       <!-- <ion-thumbnail> -->
