imagen de concurso

--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -25,6 +25,7 @@
     <ion-col>
       <!-- <ion-card *ngIf="!loading; else spinner" class="ion-no-margin"> -->
       <ion-card class="ion-no-margin">
+        <ion-img [src]="configService.apiUrl(concurso.img_url)"></ion-img>
         <ion-card-header>
           <ion-row>
             <ion-col >
