--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -354,6 +354,25 @@
 
           </ion-row>
 
+          
+          <ion-row class="w-100">
+            <ion-col class="ion-no-padding">
+              <ion-item class="w-100 ion-no-padding ion-margin-bottom">
+                <!-- <ion-label position="floating">Imágen</ion-label> -->
+                <!-- [(ngModel)]="image.code" -->
+                <input type="file" (change)="fileUpload($event.target)" />
+              </ion-item>
+              <div>
+                <!-- <ion-thumbnail> -->
+                  <ion-row  class="ion-justify-content-center">
+
+                    <ion-img  [src]="img_url" alt=""> </ion-img>
+                  </ion-row>
+                <!-- </ion-thumbnail> -->
+              </div>
+            </ion-col>
+          </ion-row>
+
           <ion-row class="ion-margin-top ion-justify-content-end">
             <ion-col size="12">
               <ion-row class="ion-justify-content-end">
