--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -110,7 +110,7 @@
       <ion-col>
         <ion-row>
           <ion-col size="11.5" push="0.25">
-            <!-- usuario, email, fotoclub/entidad -->
+            <!-- usuario, email, Fotoclub/Agrupación -->
             <ion-grid class="ion-no-padding ion-padding-bottom">
               <ion-row
                 class="
