--- a/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/src/app/modules/auth/components/login-view/login-view.component.html
@@ -12,7 +12,7 @@
 
           <ion-row>
             <ion-card class="ion-margin-top expand-full">
-              <div class="expand-full ion-padding-start ion-padding-end">
+              <div class="expand-full ion-padding-start ion-padding-end" class="ion-margin">
                 <ion-item class="expand-full">
                   <ion-col class="ion-no-padding">
                     <ion-label position="stacked">Usuario</ion-label>
