--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -31,7 +31,8 @@
               <ion-row
                 class="ion-justify-content-center ion-align-items-center"
               >
-                <ion-col  class="ion-align-items-center">
+              <!--TODO: revisar size por aspect -->
+                <ion-col size="11" class="ion-align-items-center"> 
                   <!-- <app-usuario-img [src]="usuario.img_url"></app-usuario-img> -->
                   <!-- <ion-row> -->
 
