--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -147,20 +147,16 @@
             >
               <!-- concurso card -->
               <!-- <ion-card *ngFor="let concurso of concursos"> -->
-                <!-- TODO: img -->
-                <ion-card *ngFor="let c of concursos" class="maxHeight">
+                
+                <ion-card *ngFor="let c of concursos; index as i">
+                  <!-- <ion-row *ngIf="i%2 == 0 || !responsiveService.isDesktop; else isSecondary"> -->
                   <ion-row>
-                    <ion-col size="12" size-md="7">
-                      <!-- <img #imageContest id="imageContest" [src]="configService.apiUrl(c.img_url)"> -->
-                      
-                        <!-- [class.ancho]="anchoImg" [class.alto]="!anchoImg"  -->
-                        <ion-avatar>
-
-                          <ion-img (ionImgWillLoad)="obtenerTamanio($event)" [src]="configService.apiUrl(c.img_url)"></ion-img>
-                        </ion-avatar>
-                     
-                    </ion-col>
                     <ion-col size="12" size-md="5">
+                          <ion-avatar [style.height.px]="obtenerPx(colCard)" class="w-100">
+                            <ion-img (ionImgWillLoad)="obtenerTamanio($event)" [src]="configService.apiUrl(c.img_url)"></ion-img>
+                          </ion-avatar>
+                    </ion-col>
+                    <ion-col #colCard id="colCard" size="12" size-md="7">
 
                       <ion-row class="h-100">
 
@@ -177,14 +173,14 @@
                         </ion-card-header>
                         <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
                        
-                        <ion-card-content class="w-100">
-                          <ion-row >
-                            <!-- TODO: 600 caracteres¿? -->
-                            <ion-text >
+                        <ion-card-content style="padding-bottom: 0 !important;" class="w-100">
+                          <!-- <ion-row > -->
+                           
+                            <p class="line-clamp" >
                               {{c.description}}
-                            </ion-text>
-                          </ion-row>
-                          <ion-row class="ion-margin-top">
+                            </p>
+                          <!-- </ion-row> -->
+                          <ion-row class="ion-margin-top ">
                             <b>Categorias:</b>
                             <ion-badge color="light" class="ion-margin-start"
                               *ngFor="let c of c.categories"
@@ -200,20 +196,27 @@
                               {{s.name}}
                             </ion-badge>
                           </ion-row>
-
-
+                          <ion-row class="w-100">
+                            <ion-col class="ion-float-right ion-align-self-end">
+                              <!-- <ion-toolbar> -->
+                              <!-- <ion-buttons slot="start"> -->
+                              <ion-button class="ion-float-right"  size="small" [routerLink]="[c.id]"
+                                >Ver concurso</ion-button
+                              >
+                              <!-- </ion-buttons> -->
+                              <!-- </ion-toolbar> -->
+                            </ion-col>
+                          </ion-row>
                         </ion-card-content>
-                        <ion-row class="w-100">
-                          <ion-col class="ion-float-right">
-                            <!-- <ion-toolbar> -->
-                            <!-- <ion-buttons slot="start"> -->
-                            <ion-button class="ion-float-right"  size="small" [routerLink]="[c.id]"
-                              >Ver concurso</ion-button
-                            >
-                            <!-- </ion-buttons> -->
-                            <!-- </ion-toolbar> -->
-                          </ion-col>
-                        </ion-row>
+
+                          <!-- <ion-row class="ion-padding-start">
+                              <ion-col class="ion-align-self-end ion-no-padding">
+                              </ion-col>
+  
+                          </ion-row> -->
+
+
+                       
                         
                       </ion-row>
 
@@ -232,6 +235,80 @@
                       </ion-row>
                     </ion-footer> -->
                   </ion-row>
+                  <!-- <ng-template #isSecondary>
+                    <ion-row>
+                      <ion-col #colCard id="colCard" size="12" size-md="7">
+
+                        <ion-row class="h-100">
+    
+                          <ion-card-header>
+                            <ion-row class="ion-align-items-center">
+                              <ion-col class="ion-no-padding">
+                                <app-contest-status-chip
+                                  [contest]="c"
+                                ></app-contest-status-chip>
+                                <ion-card-title>{{c.name}}</ion-card-title>
+                              </ion-col>
+                            </ion-row>
+                          </ion-card-header>
+                         
+                          <ion-card-content style="padding-bottom: 0 !important;" class="w-100">
+                            <ion-row class="truncate" >
+                              <p class=" line-clamp">
+                                {{c.description}}
+                              </p>
+                            </ion-row>
+                          </ion-card-content>
+    
+                            <ion-row class="ion-padding-start">
+                                <ion-col class="ion-align-self-end ion-no-padding">
+                                  <ion-row class="ion-margin-top ">
+                                    <b>Categorias:</b>
+                                    <ion-badge color="light" class="ion-margin-start"
+                                      *ngFor="let c of c.categories"
+                                    >
+                                      {{c.name}}
+                                    </ion-badge>
+                                  </ion-row>
+                                  <ion-row class="ion-margin-bottom">
+                                    <b>Secciones:</b>
+                                    <ion-badge color="light" class="ion-margin-start"
+                                      *ngFor="let s of c.sections"
+                                    >
+                                      {{s.name}}
+                                    </ion-badge>
+                                  </ion-row>
+                                </ion-col>
+    
+                            </ion-row>
+    
+    
+                         
+                          <ion-row class="w-100">
+                            <ion-col class="ion-float-right ion-align-self-end">
+              
+                              <ion-button class="ion-float-right"  size="small" [routerLink]="[c.id]"
+                                >Ver concurso</ion-button
+                              >
+                      
+                            </ion-col>
+                          </ion-row>
+                          
+                        </ion-row>
+    
+                        
+                      </ion-col>
+                      
+                      <ion-col size="12" size-md="5">
+                        <ion-avatar [style.height.px]="obtenerPx(colCard)" class="w-100">
+                          <ion-img (ionImgWillLoad)="obtenerTamanio($event)" [src]="configService.apiUrl(c.img_url)"></ion-img>
+                        </ion-avatar>
+                      </ion-col>
+                  
+
+                    </ion-row>
+                  </ng-template> -->
+              
                 <!-- <ion-label>{{item}}</ion-label> -->
               </ion-card>
             </ion-list>
