--- a/src/app/concursos/concurso-detail/concurso-detail.page.scss
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.scss
@@ -1,4 +1,6 @@
+ion-avatar img{ width: 100% !important; height: 100% !important; } 
 
+ion-avatar{--border-radius: 0px; } 
 
 #concurso-tabs {
     height: 100%
